--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  p,
+  h2,
+  h3 {
+    font-family: "Nunito Sans", sans-serif;
+  }
+}
+@layer base {
+  h1 {
+    font-family: "termina", sans-serif;
+  }
+}
+
 /* Centered text section 1 */
 .centered {
   position: absolute;
