--- a/src/style.css
+++ b/src/style.css
@@ -63,3 +63,23 @@
     opacity: 1;
   }
 }
+
+/*flip text*/
+.flipX {
+  animation:flip 2s linear forwards;
+  
+  
+}
+ 
+@keyframes flip {
+  from {
+      transform: rotateX(0deg);
+  }
+
+  to {
+      transform: rotateX(190deg) translate(0, -2.1rem);
+      color:#3F342D;
+   }
+}
+
+
